firefox-trunk (72.0~a1~hg20191021r498279-0ubuntu1) UNRELEASED; urgency=medium

  * 

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 21 Oct 2019 20:04:47 +0200

firefox-trunk (71.0~a1~hg20191019r498279-0ubuntu1) eoan; urgency=medium

  [ Olivier Tilloy, Rico Tzschichholz ]
  * Build with clang, as official firefox builds are now produced with clang
    and select the highest clang version available to avoid hardcoding
    one version for each supported Ubuntu release:
    - debian/build/rules.mk
    - debian/config/mozconfig.in
    - debian/control{,.in}

  [ Rico Tzschichholz ]
  * Update patches
    - debian/patches/partially-revert-google-search-update.patch
  * Add Tagalog and Triqui language packs
    - update debian/config/locales.all
    - update debian/config/locales.shipped
    - update debian/config/searchplugins.conf
    - update debian/control
  * Bump build-dep on rustc >= 1.37.0 and cargo >= 0.38
    - debian/control{,.in}

  [ Olivier Tilloy ]
  * Restore icons for the amazon search engine descriptions (LP: #1844051)
    - update debian/searchplugins/amazon*.xml
  * Install the minidump-analyzer executable (LP: #1845205)
    - update debian/firefox.install.in

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 21 Oct 2019 20:04:01 +0200

firefox-trunk (70.0~a1~hg20190831r491013-0ubuntu1) eoan; urgency=medium

  [ Rico Tzschichholz ]
  * Update patches
    - debian/patches/partially-revert-google-search-update.patch
    - debian/patches/reduce-rust-debuginfo-on-selected-architectures.patch
    - debian/patches/unity-menubar.patch
  * Bump build-dep on rustc >= 1.36.0 and cargo >= 0.37
    - debian/control{,.in}
  * Update cbindgen to 0.9.1
    - debian/build/create-tarball.py
  * Use firefox-*.json to retrieve revision
    - debian/build/create-tarball.py
  * Exclude and clean config.log
    - debian/config/tarball.conf
    - debian/rules

  [ Olivier Tilloy ]
  * Update debian/patches/unity-menubar.patch