@@ -38,6 +38,7 @@ Build-Depends: cdbs,
 	python (>= 2.7),
 	libffi-dev (>= 3.0.9) [powerpc ppc64el s390x],
 	clang-9 | clang-8 | clang-6.0,
+	libclang-9-dev | libclang-8-dev | libclang-6.0-dev,
 	llvm-9-dev | llvm-8-dev | llvm-6.0-dev,
 	cargo (>= 0.38),
 	rustc (>= 1.37.0),
